地区时间选择器完善

--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
-    "pages":[
-        "pages/index/index"
-    ],
-    "window":{
-        "backgroundTextStyle":"light",
-        "navigationBarBackgroundColor": "#2d50ac",
-        "navigationBarTitleText": "美妆大咖",
-        "navigationBarTextStyle":"#fff"
-    }
-   
+  "pages": [
+    "pages/index/index"
     
+    
+    
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#2d50ac",
+    "navigationBarTitleText": "信息价小助手",
+    "navigationBarTextStyle": "#fff"
+  }
 }
