我的界面初步

--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/new-index/new-index",
-    "pages/user/user"
+    "pages/user/user",
+    "pages/new-index/new-index"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
