--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/user/user",
-    "pages/new-index/new-index"
+    "pages/new-index/new-index",
+    "pages/user/user"
+    
     
   ],
   "window": {
