--- a/app.json
+++ b/app.json
@@ -40,5 +40,10 @@
       }
     ]
   },
-  "cloud": true
+  "cloud": true,
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  }
 }
