--- a/app.json
+++ b/app.json
@@ -1,17 +1,14 @@
 {
   "pages": [
-    
     "pages/new-index/new-index",
     "pages/user/user",
     "pages/test/test",
     "pages/detail/detail",
     "pages/search/search",
-    
     "pages/user/about/about",
     "pages/user/star/star",
     "pages/banner/banner2",
     "pages/banner/banner1"
-    
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -45,5 +42,6 @@
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
