bannner活动修改 价格显示调整

--- a/app.json
+++ b/app.json
@@ -14,8 +14,8 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "white",
     "navigationBarTitleText": "查材价",
-    "navigationBarTextStyle": "black",
-    "enablePullDownRefresh": true
+    "navigationBarTextStyle": "black"
+   
   },
   "tabBar": {
     "color": "#bbbbbb",
